[tool.poetry]
name = "fight_arena"
version = "0.0.1"
description = "Descripción de tu proyecto"
authors = ["Tu Nombre <tu@email.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "fight_arena", from = "." },
    { include = "fight_arena.*", from = "." },
]


